--- a/_config.yml
+++ b/_config.yml
@@ -44,6 +44,7 @@ authors:
 
   ricopfaus:
     display_name: Rico Pfaus
+    gravatar: c2e07ac6111335e525da4c889b3b2c0c
     email: rico.pfaus@kaufhof.de
     twitter: ryxxxx
     github: ryx
